added categorical groupings

--- a/src/2. Data Prep.ipynb
+++ b/src/2. Data Prep.ipynb
@@ -13303,12 +13303,308 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting \"origin_country\" and \"shipping_option_name\" to Binary Cols"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "origin_country_CN\n",
+       "True     1432\n",
+       "False      38\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_data3[\"origin_country_CN\"] = np.where(filtered_data3[\"origin_country\"]=='CN', 1, 0)\n",
+    "filtered_data3[\"origin_country_CN\"] = filtered_data3[\"origin_country_CN\"].astype(bool)\n",
+    "filtered_data3[\"origin_country_CN\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "shipping_option_Livraison\n",
+       "True     1408\n",
+       "False      62\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_data3[\"shipping_option_Livraison\"] = np.where(filtered_data3[\"shipping_option_name\"]=='Livraison standard', 1, 0)\n",
+    "filtered_data3[\"shipping_option_Livraison\"] = filtered_data3[\"shipping_option_Livraison\"].astype(bool)\n",
+    "filtered_data3[\"shipping_option_Livraison\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1470, 21)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>retail_price</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>uses_ad_boosts</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_count</th>\n",
+       "      <th>badges_count</th>\n",
+       "      <th>product_color</th>\n",
+       "      <th>product_variation_size_id</th>\n",
+       "      <th>product_variation_inventory</th>\n",
+       "      <th>...</th>\n",
+       "      <th>countries_shipped_to</th>\n",
+       "      <th>inventory_total</th>\n",
+       "      <th>has_urgency_banner</th>\n",
+       "      <th>merchant_rating_count</th>\n",
+       "      <th>merchant_rating</th>\n",
+       "      <th>merchant_id</th>\n",
+       "      <th>merchant_has_profile_picture</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>origin_country_CN</th>\n",
+       "      <th>shipping_option_Livraison</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>100</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>M</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
+       "      <td>568</td>\n",
+       "      <td>4.128521</td>\n",
+       "      <td>595097d6a26f6e070cb878d1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5e9ae51d43d6a96e303acdb0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.00</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>6135</td>\n",
+       "      <td>0</td>\n",
+       "      <td>green</td>\n",
+       "      <td>XS</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
+       "      <td>17752</td>\n",
+       "      <td>3.899673</td>\n",
+       "      <td>56458aa03a698c35c9050988</td>\n",
+       "      <td>False</td>\n",
+       "      <td>58940d436a0d3d5da4e95a38</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.00</td>\n",
+       "      <td>43</td>\n",
+       "      <td>100</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Less Frequent Color</td>\n",
+       "      <td>XS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
+       "      <td>295</td>\n",
+       "      <td>3.989831</td>\n",
+       "      <td>5d464a1ffdf7bc44ee933c65</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5ea10e2c617580260d55310a</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>579</td>\n",
+       "      <td>0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>M</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41</td>\n",
+       "      <td>50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>23832</td>\n",
+       "      <td>4.020435</td>\n",
+       "      <td>58cfdefdacb37b556efdff7c</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5cedf17ad1d44c52c59e4aca</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.72</td>\n",
+       "      <td>3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
+       "      <td>14482</td>\n",
+       "      <td>4.001588</td>\n",
+       "      <td>5ab3b592c3911a095ad5dadb</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5ebf5819ebac372b070b0e70</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   price  retail_price  units_sold  uses_ad_boosts  rating  rating_count  \\\n",
+       "0  16.00            14         100           False    3.76            54   \n",
+       "1   8.00            22       20000            True    3.45          6135   \n",
+       "2   8.00            43         100           False    3.57            14   \n",
+       "3   8.00             8        5000            True    4.03           579   \n",
+       "4   2.72             3         100            True    3.10            20   \n",
+       "\n",
+       "   badges_count        product_color product_variation_size_id  \\\n",
+       "0             0                white                         M   \n",
+       "1             0                green                        XS   \n",
+       "2             0  Less Frequent Color                        XS   \n",
+       "3             0                black                         M   \n",
+       "4             0               yellow                         S   \n",
+       "\n",
+       "   product_variation_inventory  ...  countries_shipped_to  inventory_total  \\\n",
+       "0                           50  ...                    34               50   \n",
+       "1                           50  ...                    41               50   \n",
+       "2                            1  ...                    36               50   \n",
+       "3                           50  ...                    41               50   \n",
+       "4                            1  ...                    35               50   \n",
+       "\n",
+       "   has_urgency_banner  merchant_rating_count  merchant_rating  \\\n",
+       "0                True                    568         4.128521   \n",
+       "1                True                  17752         3.899673   \n",
+       "2                True                    295         3.989831   \n",
+       "3               False                  23832         4.020435   \n",
+       "4                True                  14482         4.001588   \n",
+       "\n",
+       "                merchant_id merchant_has_profile_picture  \\\n",
+       "0  595097d6a26f6e070cb878d1                        False   \n",
+       "1  56458aa03a698c35c9050988                        False   \n",
+       "2  5d464a1ffdf7bc44ee933c65                        False   \n",
+       "3  58cfdefdacb37b556efdff7c                        False   \n",
+       "4  5ab3b592c3911a095ad5dadb                        False   \n",
+       "\n",
+       "                 product_id origin_country_CN  shipping_option_Livraison  \n",
+       "0  5e9ae51d43d6a96e303acdb0              True                       True  \n",
+       "1  58940d436a0d3d5da4e95a38              True                       True  \n",
+       "2  5ea10e2c617580260d55310a              True                       True  \n",
+       "3  5cedf17ad1d44c52c59e4aca              True                       True  \n",
+       "4  5ebf5819ebac372b070b0e70              True                       True  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_data3.drop(columns=[\"origin_country\", \"shipping_option_name\"], inplace=True)\n",
+    "print(filtered_data3.shape)\n",
+    "filtered_data3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_data3.to_csv(\"\")"
+    "filtered_data3.to_csv(\"../data/Processed_Data/filtered_data3.csv\", index=False)"
    ]
   }
  ],
